--- a/Testing-Jitsi-at-Scale/docker-compose.yml
+++ b/Testing-Jitsi-at-Scale/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   hub:
       image: selenium/hub:3.141.59 # -20210422
   node:
-      build: ./node
+      # build: ./node
       image: meetrix/jitsi-meet-torture-selenium-node
       volumes:
         - /dev/shm:/dev/shm
